# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.236 2005/04/21 18:18:46 rocket Exp $

  21 Apr 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/generic_stage_target.py:
  Added a better exception handling message for keyboard interrupt and added
  countdown timer for purge operation to give an opportunity to exit

  21 Apr 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/generic_stage_target.py:
  Add support to clear the autoresume flags and improve the purge code to
  clean the chroot, and pkg/kern cache

  21 Apr 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/generic_stage_target.py,
  modules/livecd_stage1_target.py:
  only append livecd-tools to the livecd-stage1 target package list and move a
  check out of the way so command line and spec files can co-exist

  21 Apr 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fixed python syntax in set_packages so catalyst will run

  21 Apr 2005; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py,
  modules/embedded_target.py, modules/generic_stage_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/netboot_target.py,
  modules/stage4_target.py, modules/tinderbox_target.py,
  targets/embedded/embedded-chroot.sh,
  targets/embedded/embedded-controller.sh,
  targets/livecd-stage1/livecd-stage1-controller.sh,
  -targets/livecd-stage2/livecd-stage2-bootloader.sh,
  -targets/livecd-stage2/livecd-stage2-cdfs.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  -targets/livecd-stage2/livecd-stage2-iso.sh,
  targets/stage4/stage4-chroot.sh, targets/stage4/stage4-controller.sh,
  +targets/support/bootloader-setup.sh, targets/support/chroot-functions.sh,
  +targets/support/create-iso.sh, targets/support/filesystem-functions.sh,