@@ -1,5 +1,11 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.236 2005/04/21 18:18:46 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.237 2005/04/22 18:33:06 rocket Exp $
+
+  22 Apr 2005; Eric Edgar <rocket@gentoo.org> modules/embedded_target.py,
+  modules/generic_stage_target.py, modules/livecd_stage2_target.py,
+  modules/stage4_target.py:
+  Change ordering of tasks so root_overlay and fsscript occur after
+  livecd_update, giving users a chance to override livecd_update
 
   21 Apr 2005; Eric Edgar <rocket@gentoo.org> catalyst,
   modules/catalyst_support.py, modules/generic_stage_target.py:
